--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "tailwindcss": "^3.0.24",
     "vue": "^3.2.13"
   },
   "devDependencies": {
