--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "firebase": "^9.8.2",
+    "marked": "^4.0.16",
     "tailwindcss": "^3.0.24",
-    "vue": "^3.2.13"
+    "vue": "^3.2.13",
+    "vue-router": "^4.0.13"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~5.0.0",
